Update Collections API, start writing Android backend

--- a/TODO
+++ b/TODO
@@ -30,9 +30,9 @@ Single Instance Checker
 Stream API
 Process API
 String Template API
-Collection/Map Utilities
 String/CharSequence Utilities
 Time/Date Utilities [Calendar-like LocalDate API]
+Future/Executors API
 --------------------------------
 
 --------------------------------
